[package]
name = "brass"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
spin = "0.9.8"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
volatile = "0.2.6"
x86_64 = "0.14.12"
